<resources>
    <string name="app_name">Wallpapers HD : Ultimate</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Get Updated Wallpapers Daily!</string>
    <string name="slide_1_desc">Morning Time With New Updated Wallpapers</string>

    <string name="slide_2_title">Material Designed!</string>
    <string name="slide_2_desc">Fully Material designed with best color palette</string>

    <string name="slide_3_title">Vast Categories!</string>
    <string name="slide_3_desc">Every Categories Of Wallpapers Available in HD</string>

    <string name="slide_4_title">Share , Download And Do More!</string>
    <string name="slide_4_desc">Share , Download , Set As Wallpaper And Do More</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> wallpapers hd -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="action_settings">Settings</string>
    <string name="action_camera">Camera</string>

    <string name="toast_saved">Wallpaper saved to #</string>
    <string name="toast_saved_failed">Sorry! Failed to save wallpaper</string>
    <string name="toast_wallpaper_set">Wallpaper updated!</string>
    <string name="toast_wallpaper_set_failed">Sorry! Unable to set wallpapaer</string>
    <string name="splash_error">Unable to download wallpapers. Verify app settings or device doesn\'t have internet connection!</string>
    <string name="set_wallpaper">Set</string>
    <string name="download_wallpaper">Download</string>
    <string name="msg_unknown_error">Sorry! Unknown error occurred.</string>
    <string name="msg_wall_fetch_error">Sorry! Unable to fetch wallpaper(s). Verify app settings or device doesn\'t have internet connection.</string>
    <string name="toast_enter_valid_grid_columns">Please enter valid number of columns</string>
    <string name="toast_enter_gallery_name">Please enter gallery directory name</string>
    <string name="lbl_no_grid_columns">Number Of Grid Columns</string>
    <string name="lbl_gallery_name">Gallery Directory Name</string>
    <string name="lbl_btn_save">Save</string>

    <string name="fab_menu_close">Close</string>
    <string name="fab_settings">Settings</string>
    <string name="fab_camera">Camera</string>

    <string name="categories_tab">Categories</string>
    <string name="colors_tab">Color Palette</string>

    <string name="permission">Please enable permissions</string>

    <string name="copy">Copy</string>
    <string name="visit_our_site">Visit Us</string>
    <string name="visit_our_fb_page">Visit our Facebook page</string>
    <string name="Subscribe_our_chanel">Subscribe our chanel</string>

    <string name="ad1_unit_id_MainActivity">ca-app-pub-9556270719341003/6787411979</string>
    <string name="ad1_unit_id_SettingsActivity">ca-app-pub-9556270719341003/2577538377</string>
    <string name="ad1_unit_id_WallpapersOfAlbums">ca-app-pub-9556270719341003/5531004773</string>
    <string name="ad1_unit_id_ColoursSecondary">ca-app-pub-9556270719341003/9123599572</string>

    <!-- Settintgs Info -->
    <string name="info">Info</string>
    <string name="info_message">"Made by Gmonetix\n\nIt's an open source project initiated by Gmonetix and present in github.\n\nLibraries used - \n\t1. Volley\n\t2. Gson\n\t3. FAB (com.github.clans:fab:1.6.4)\n\t4. Firebase\n\nThis app uses google photo's API to get the albums and images."</string>

</resources>
